[package]
name = "cookie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
poem-extractor = ["dep:poem"]

[dependencies]
poem = { version = "3.0", default-features = false, optional = true }
thiserror = "1.0"
http = "1.1"
itertools = "0.13"
