[package]
name = "cookie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
poem-extractor = ["dep:poem"]
axum-extractor = ["dep:axum"]

[dependencies]
poem = { version = "3.1", default-features = false, optional = true }
axum = { version = "0.8", default-features = false, optional = true }
thiserror = "2.0"
http = "1.4"
itertools = "0.14"
tracing = "0.1"
